secondfile/objects/Market_Development_Fund__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Market_Development_Funds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Collateral</fullName>
                </value>
                <value>
                    <fullName>Customer Success Stories</fullName>
                </value>
                <value>
                    <fullName>Demo Products and Services</fullName>
                </value>
                <value>
                    <fullName>Direct Marketing</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Online Presence</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T Partner Exchange Participant Events</fullName>
                </value>
                <value>
                    <fullName>Promotional Merchandise</fullName>
                </value>
                <value>
                    <fullName>Sales Incentives</fullName>
                </value>
                <value>
                    <fullName>Technical Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Dollar_Amount_Requested_from_ATT__c</fullName>
        <label>Original Request Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Incremental_Revenue_TCV__c</fullName>
        <label>Actual Incremental Revenue (TCV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anticipated_Incremental_Revenue__c</fullName>
        <label>Anticipated Incremental Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <label>Request Approve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Funds__c</fullName>
        <label>Available Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand_Rejection_Reason__c</fullName>
        <label>Brand Rejection Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CAM_Name__c</fullName>
        <formula>Account__r.Owner.FirstName +&apos; &apos;+ Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Denial_Reason__c</fullName>
        <label>Claim Denial Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Claim_Expiration_Date__c</fullName>
        <label>Claim Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Request_Amount__c</fullName>
        <label>Claim Request Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claim_Status__c</fullName>
        <label>Claim Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Submitted_Date__c</fullName>
        <label>Claim Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claimed_Amount__c</fullName>
        <label>Claim Approve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EC_Market_Focus_Comp_Size__c</fullName>
        <label>EC Market Focus - Comp Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Market_Focus_Vertical__c</fullName>
        <label>EC Market Focus - Vertical</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting/Tax</fullName>
                </value>
                <value>
                    <fullName>Agriculture, Forestry, Fishing</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering, Architecture</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Market Research</fullName>
                </value>
                <value>
                    <fullName>Media/Marketing/Advertising/PR</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Personal Services</fullName>
                </value>
                <value>
                    <fullName>Pharmaceuticals/Life Sciences</fullName>
                </value>
                <value>
                    <fullName>Printing and Publishing</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Transportation - Airlines, Railroads</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Wholesale/Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MC_Name__c</fullName>
        <label>MC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDF_Budget_Amount__c</fullName>
        <formula>MDF_Budget__r.Budget__c</formula>
        <label>MDF Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MDF_Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MDF Budget</label>
        <referenceTo>MDF_Budget__c</referenceTo>
        <relationshipName>MDFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDF_Claim_Id__c</fullName>
        <externalId>true</externalId>
        <label>MDF Claim Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDF_ID__c</fullName>
        <displayFormat>MDF-{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>MDF ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>MDF_Quarter__c</fullName>
        <label>MDF Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDF_Request_ID_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MDF Request ID Number</label>
        <referenceTo>Market_Development_Fund__c</referenceTo>
        <relationshipName>MDF_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDF_Request_ID__c</fullName>
        <externalId>true</externalId>
        <label>MDF Request ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDF_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MDF Request</label>
        <referenceTo>Market_Development_Fund__c</referenceTo>
        <relationshipName>MDF_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDF_Year__c</fullName>
        <label>MDF Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Registered_Deals__c</fullName>
        <label>Number of Registered Deals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sales_Generated__c</fullName>
        <label>Number of Sales Generated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sales_Leads__c</fullName>
        <label>Number of Sales Leads</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Contributing_Vendors__c</fullName>
        <label>Other Contributing Vendors</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Cost_of_Project__c</fullName>
        <label>Overall Cost of Project</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <label>Paid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Issued_Date__c</fullName>
        <label>Payment Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Percentage_Dedicated_to_ATT__c</fullName>
        <label>Percentage Dedicated to AT&amp;T</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pre_Brand_Approval_Status__c</fullName>
        <label>Pre-Brand Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Pending Brand Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Focus__c</fullName>
        <label>Product Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT&amp;T Virtual Private Network</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T Managed Internet Services</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T MPLS Private Network Transport</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T Network-Based IP VPN Remote Access</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T Internet Access</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T Network-Based Firewall Service</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T IP Flexible Reach</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T IP Toll- Free</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T Wireless</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T Mobile Device Management</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T Synaptic Compute as a Service</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T Synaptic Storage as a Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Activity_ROI__c</fullName>
        <label>Project Activity ROI</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Activity__c</fullName>
        <label>Project Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Amount__c</fullName>
        <label>Request Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Approval_Date_Complete__c</fullName>
        <label>Request Approval Date Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Approved_Amount__c</fullName>
        <label>Request Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Denial_Reason__c</fullName>
        <label>Request Denial Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Submit_Date__c</fullName>
        <label>Request Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submit_Date__c</fullName>
        <label>Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Sales_Region__c</fullName>
        <label>Target Sales Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MDF</label>
    <nameField>
        <displayFormat>MDF-{00000}</displayFormat>
        <label>Market Development Fund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDF</pluralLabel>
    <recordTypes>
        <fullName>MDF_Claim</fullName>
        <active>true</active>
        <label>MDF Claim</label>
    </recordTypes>
    <recordTypes>
        <fullName>MDF_Request</fullName>
        <active>true</active>
        <label>MDF Request</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Brand_Rejection_Reason</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL(   Pre_Brand_Approval_Status__c   , &quot;Denied&quot;),  ISBLANK(   Brand_Rejection_Reason__c   ) )</errorConditionFormula>
        <errorDisplayField>Brand_Rejection_Reason__c</errorDisplayField>
        <errorMessage>Brand Denial Reason is required when Pre-Brand Approval Status is in Denied Stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Claim_Amount_Approved_cannot_be_null</fullName>
        <active>false</active>
        <description>Claim approve amount cannot be blank or $0.00 when Claim Status is in the Approved Stage.</description>
        <errorConditionFormula>AND (ISPICKVAL( Claim_Status__c  , &apos;Approved&apos;),  OR ( ISNULL(    Claimed_Amount__c ) , Claimed_Amount__c = 0   )
		)</errorConditionFormula>
        <errorDisplayField>Claimed_Amount__c</errorDisplayField>
        <errorMessage>Claim approve amount cannot be blank or $0.00 when Claim Status is in the Approved Stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Claim_Appr_Amt_enter_but_no_Status</fullName>
        <active>false</active>
        <description>Claim Status is not in Approved Stage, but a and Claim Request Approve Amount has been entered.</description>
        <errorConditionFormula>AND (NOT(ISPICKVAL(  Claim_Status__c , &apos;Approved&apos;)),  Claimed_Amount__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Claim_Status__c</errorDisplayField>
        <errorMessage>Claim Status is not in Approved Stage, but a and Claim Request Approve Amount has been entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Claim_Approval_Status_Change</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
		 ISCHANGED( Claim_Status__c ), NOT(ISPICKVAL(PRIORVALUE(Claim_Status__c ) , &apos;Submitted&apos;))
		,
		ISPICKVAL(Claim_Status__c , &apos;Approved&apos;)
		)</errorConditionFormula>
        <errorDisplayField>Claim_Status__c</errorDisplayField>
        <errorMessage>Claim Status needs to be entered in Submitted stage first before changing Claim Status to Approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Claim_Approve_Amount_negative_check</fullName>
        <active>false</active>
        <description>This is to make sure that Claim Approve Amount is not negative.</description>
        <errorConditionFormula>Claimed_Amount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Claimed_Amount__c</errorDisplayField>
        <errorMessage>The Claim Approve Amount should not be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Claim_Denial_Reson_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL(  Claim_Status__c  , &quot;Denied&quot;),  ISBLANK(  Claim_Denial_Reason__c  ) )</errorConditionFormula>
        <errorDisplayField>Claim_Denial_Reason__c</errorDisplayField>
        <errorMessage>Claim Denial Reason is required when Claim Status is in Denied Stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Claim_Request_Amount_negative_check</fullName>
        <active>false</active>
        <description>This is to make sure that Claim Request Amount is not negative.</description>
        <errorConditionFormula>Claim_Request_Amount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Claim_Request_Amount__c</errorDisplayField>
        <errorMessage>The Claim Request Amount should not be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Claim_Status_Submitted</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL(  Claim_Status__c  , &apos;Submitted&apos;),  OR(ISNULL(   Claim_Request_Amount__c   ) , Claim_Request_Amount__c = 0)


)</errorConditionFormula>
        <errorDisplayField>Claim_Request_Amount__c</errorDisplayField>
        <errorMessage>Claim request amount cannot be blank or equal to $0.00 when Claim Status is in Submitted Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Amount_enter_but_no_appr_status</fullName>
        <active>false</active>
        <description>Approval Status is not in Approved Stage, but a and Request Approve Amount has been entered.</description>
        <errorConditionFormula>AND (NOT(ISPICKVAL( Approval_Status__c , &apos;Approved&apos;)),  Approved_Amount__c  &gt; 0)</errorConditionFormula>
        <errorDisplayField>Approval_Status__c</errorDisplayField>
        <errorMessage>Approval Status is not in Approved Stage, but a and Request Approve Amount has been entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Request_Amount_Approved</fullName>
        <active>false</active>
        <errorConditionFormula>AND (ISPICKVAL( Approval_Status__c , &apos;Approved&apos;),  OR ( ISNULL(   Approved_Amount__c) , Approved_Amount__c = 0   )
		)</errorConditionFormula>
        <errorDisplayField>Approved_Amount__c</errorDisplayField>
        <errorMessage>Request approve amount cannot be blank and greater than $0.00 when Approval Status is in the Approved Stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Request_Amount_should_not_be_negative</fullName>
        <active>false</active>
        <description>Ths is to  make sure that the Request Amount field should not have negative value</description>
        <errorConditionFormula>Request_Amount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Request_Amount__c</errorDisplayField>
        <errorMessage>The Request Amount should not be negative .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Request_Approval_Section_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND (

NOT(ISPICKVAL( Claim_Status__c , &quot;&quot;)), 

OR (
 NOT(ISPICKVAL( Approval_Status__c , &quot;Approved&quot;)),  OR(ISNULL( Request_Amount__c ), Request_Amount__c = 0) ,  OR(ISNULL( Approved_Amount__c ), Approved_Amount__c = 0)   

)

)</errorConditionFormula>
        <errorMessage>Claim Status has been entered, but necessary data are needed.
Approval Status needs to be in Approved Stage, Request Amount cannot be blank, and Request Approved Amount cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Request_Approval_Status_Change</fullName>
        <active>false</active>
        <description>When Approval Status is approved, it needs to come after Claim Status have been Submitted. Therefore, Approval Status cannot be automatically set to Approved from any other values.</description>
        <errorConditionFormula>AND( 
		 ISCHANGED(Approval_Status__c), NOT(ISPICKVAL(PRIORVALUE(Approval_Status__c) , &apos;Submitted&apos;))
		,
		ISPICKVAL(Approval_Status__c, &apos;Approved&apos;)
		)</errorConditionFormula>
        <errorDisplayField>Approval_Status__c</errorDisplayField>
        <errorMessage>Approval Status needs to be entered in Submitted stage first before chaging Approval Status to Approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Request_Approve_Amount_negative_check</fullName>
        <active>false</active>
        <description>This is to make sure that Request Approve Amount is not negative.</description>
        <errorConditionFormula>Approved_Amount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Approved_Amount__c</errorDisplayField>
        <errorMessage>The Request Approve Amount should not be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Request_Denial_Reason</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL(Approval_Status__c, &quot;Denied&quot;),  ISBLANK( Request_Denial_Reason__c ) )</errorConditionFormula>
        <errorDisplayField>Request_Denial_Reason__c</errorDisplayField>
        <errorMessage>Request Denial Reason is required when Approval Status is in Denied Stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Request_Submitted</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL( Approval_Status__c , &apos;Submitted&apos;),  OR(ISNULL( Request_Amount__c ), Request_Amount__c =0  )
)</errorConditionFormula>
        <errorDisplayField>Request_Amount__c</errorDisplayField>
        <errorMessage>Request amount cannot be blank or equal to $0.00 when Approval Status is in Submitted Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Submit_Date_and_Request_Amount</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  ISCHANGED(Submit_Date__c) , ISCHANGED(Request_Amount__c) )</errorConditionFormula>
        <errorMessage>Submit Date and Request Amount can&apos;t be changed.</errorMessage>
    </validationRules>
</CustomObject>